tests/semantic/valid/16_r4_overload_then_call.hulk
function suma(a, b) => a + b;
function suma(a, b, c) => a + b + c;

print(suma(1, 2));
print(suma(1, 2, 3));
