tests/semantic/invalid/13_r3_overload_same_arity.hulk
function suma(a, b) => a + b;
function suma(x, y) => x + y;

print(suma(1, 2));
